guestbook-bk/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
  name: guestbook-ui
  namespace: guestbook
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.manhvt.com
    http:
      paths:
      - backend:
          service:
            name: guestbook-ui
            port:
              number: 80
        path: /
        pathType: Prefix
